--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "laravel/framework": "^8.13",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.0",
+        "maatwebsite/excel": "^3.1",
         "maatwebsite/laravel-sidebar": "^2.4",
         "mcamara/laravel-localization": "^1.6",
         "nwidart/laravel-modules": "^8.0",
