--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
         "tightenco/ziggy": "^0.9.4",
         "typicms/nestablecollection": "^1.1",
         "venturecraft/revisionable": "^1.35",
-        "yajra/laravel-datatables-oracle": "~9.0"
+        "yajra/laravel-datatables-oracle": "~9.0",
+        "league/flysystem-aws-s3-v3": "^3.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
