--- a/composer.json
+++ b/composer.json
@@ -11,48 +11,47 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.3",
-        "anhskohbo/no-captcha": "^3.0",
-        "astrotomic/laravel-translatable": "^11.9",
-        "cartalyst/sentinel": "^5.0",
-        "cviebrock/eloquent-sluggable": "^8.0",
-        "doctrine/dbal": "^2.11",
-        "fideloper/proxy": "^4.4",
-        "guzzlehttp/guzzle": "^7.0.1",
+        "php": "^8.0",
+        "anhskohbo/no-captcha": "^3.4",
+        "astrotomic/laravel-translatable": "^11.10",
+        "cartalyst/sentinel": "^6.0",
+        "cviebrock/eloquent-sluggable": "^9.0",
+        "doctrine/dbal": "^2.13",
+        "guzzlehttp/guzzle": "^7.2",
         "nwidart/laravel-menus": "^7.0",
         "imagina/stylist": "^3.0",
         "intervention/image": "^2.5",
-        "jantinnerezo/livewire-alert": "^2.0",
+        "jantinnerezo/livewire-alert": "^2.2",
         "kalnoy/nestedset": "^6.0",
         "laracasts/presenter": "^0.2.4",
-        "laravel/framework": "^8.13",
+        "laravel/framework": "^9.52",
         "laravel/passport": "^10.4",
-        "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.0",
-        "laravelcollective/html": "^6.0",
-        "livewire/livewire": "^2.3",
-        "maatwebsite/laravel-sidebar": "^2.4",
-        "mcamara/laravel-localization": "^1.6",
+        "laravel/tinker": "^2.7",
+        "laravel/ui": "^3.3",
+        "laravelcollective/html": "^6.3",
+        "livewire/livewire": "^2.10",
+        "maatwebsite/laravel-sidebar": "^2.5",
+        "mcamara/laravel-localization": "^1.7",
         "nwidart/laravel-modules": "^8.0",
-        "pusher/pusher-php-server": "^4.1",
+        "pusher/pusher-php-server": "^5.0",
         "ramsey/uuid": "^4.0",
-        "symfony/yaml": "^5.1",
+        "symfony/yaml": "^6.0",
         "tightenco/ziggy": "^0.9.4",
-        "typicms/nestablecollection": "^1.1",
-        "venturecraft/revisionable": "^1.35",
-        "yajra/laravel-datatables-oracle": "~9.0",
+        "typicms/nestablecollection": "^1.2",
+        "venturecraft/revisionable": "^1.39",
+        "yajra/laravel-datatables-oracle": "^9.19",
         "league/flysystem-aws-s3-v3": "^3.0"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.5",
-        "fzaninotto/faker": "^1.9.1",
+        "barryvdh/laravel-debugbar": "^3.6",
         "league/flysystem-aws-s3-v3": "^1.0",
-        "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^5.0",
-        "orchestra/testbench": "^6.2",
-        "phpunit/phpunit": "^9.3",
+        "mockery/mockery": "^1.4.4",
+        "nunomaduro/collision": "^6.3",
+        "orchestra/testbench": "^7.0",
+        "phpunit/phpunit": "^9.5.10",
         "predis/predis": "^1.1",
-        "facade/ignition": "^2.3.6"
+        "fakerphp/faker": "^1.9.1",
+        "spatie/laravel-ignition": "^1.4"
     },
     "autoload": {
         "psr-4": {
@@ -86,6 +85,9 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
+        ],
+        "post-update-cmd": [
+            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
         ]
     },
     "config": {
