--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^8.0",
-        "anhskohbo/no-captcha": "^3.4",
-        "astrotomic/laravel-translatable": "^11.10",
-        "cartalyst/sentinel": "^6.0",
-        "cviebrock/eloquent-sluggable": "^9.0",
-        "doctrine/dbal": "^2.13",
+        "php": "^8.1",
+        "anhskohbo/no-captcha": "^3.5",
+        "astrotomic/laravel-translatable": "^11.12",
+        "cartalyst/sentinel": "^7.0",
+        "cviebrock/eloquent-sluggable": "^10.0",
+        "doctrine/dbal": "^3.5",
         "guzzlehttp/guzzle": "^7.2",
         "nwidart/laravel-menus": "^7.0",
         "imagina/stylist": "^3.0",
@@ -24,34 +24,34 @@
         "jantinnerezo/livewire-alert": "^2.2",
         "kalnoy/nestedset": "^6.0",
         "laracasts/presenter": "^0.2.4",
-        "laravel/framework": "^9.52",
-        "laravel/passport": "^10.4",
-        "laravel/tinker": "^2.7",
-        "laravel/ui": "^3.3",
-        "laravelcollective/html": "^6.3",
-        "livewire/livewire": "^2.10",
+        "laravel/framework": "^10.13",
+        "laravel/passport": "^11.5",
+        "laravel/tinker": "^2.8",
+        "laravel/ui": "^4.2",
+        "laravelcollective/html": "^6.4",
+        "livewire/livewire": "^2.11",
         "maatwebsite/laravel-sidebar": "^2.5",
         "mcamara/laravel-localization": "^1.7",
         "nwidart/laravel-modules": "^8.0",
         "pusher/pusher-php-server": "^5.0",
-        "ramsey/uuid": "^4.0",
-        "symfony/yaml": "^6.0",
+        "ramsey/uuid": "^4.1",
+        "symfony/yaml": "^6.2",
         "tightenco/ziggy": "^0.9.4",
-        "typicms/nestablecollection": "^1.2",
-        "venturecraft/revisionable": "^1.39",
-        "yajra/laravel-datatables-oracle": "^9.19",
+        "typicms/nestablecollection": "^3.0",
+        "venturecraft/revisionable": "^1.40",
+        "yajra/laravel-datatables-oracle": "^10.3",
         "league/flysystem-aws-s3-v3": "^3.0"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.6",
+        "barryvdh/laravel-debugbar": "^3.8",
         "league/flysystem-aws-s3-v3": "^1.0",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^6.3",
+        "nunomaduro/collision": "^7.0",
         "orchestra/testbench": "^7.0",
         "phpunit/phpunit": "^9.5.10",
         "predis/predis": "^1.1",
         "fakerphp/faker": "^1.9.1",
-        "spatie/laravel-ignition": "^1.4"
+        "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
         "psr-4": {
@@ -95,6 +95,6 @@
         "sort-packages": true,
         "optimize-autoloader": true
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
