Prepare test suite for PHPUnit 10

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ yarn-error.log
 composer.lock
 package-lock.json
 yarn.lock
-.phpunit.result.cache
+/.phpunit.cache
 .php_cs.cache
 .idea
 /storage
