Remove redundant typing from DocBlocks
# Conflicts:
#	Modules/Core/Console/Installers/Installer.php
#	Modules/Core/Console/Installers/Scripts/ConfigureDatabase.php
#	Modules/Core/Console/Installers/Scripts/UnignoreComposerLock.php
#	Modules/Core/Console/Installers/Scripts/UnignorePackageLock.php
#	Modules/Core/Doctrine/Translatable.php
#	Modules/Core/Events/CollectingAssets.php
#	Modules/Core/Foundation/Theme/AssetPublisher.php
#	Modules/Core/Foundation/Theme/Theme.php
#	Modules/Core/Foundation/Theme/ThemeManager.php
#	Modules/Core/Http/Middleware/PermissionMiddleware.php
#	Modules/Core/Providers/CoreServiceProvider.php
#	Modules/Core/Repositories/Eloquent/LaravelEloquentRepository.php
#	Modules/Core/Services/Composer.php
#	Modules/Core/Sidebar/AdminSidebar.php
#	Modules/Core/Traits/CanGetSidebarClassForModule.php
#	Modules/Core/Traits/CanPublishConfiguration.php
#	Modules/Dashboard/Events/Handlers/RegisterDashboardSidebar.php
#	Modules/Dashboard/Providers/RouteServiceProvider.php
#	Modules/Iad/Http/Livewire/Ad.php
#	Modules/Iad/Http/Livewire/AdUpForm.php
#	Modules/Iad/Listeners/RegisterIadSidebar.php
#	Modules/Iad/Providers/RouteServiceProvider.php
#	Modules/Iad/View/Components/ListItem.php
#	Modules/Iad/View/Components/UpListItem.php
#	Modules/Iappointment/Listeners/RegisterIappointmentSidebar.php
#	Modules/Iappointment/Providers/RouteServiceProvider.php
#	Modules/Iauctions/Listeners/RegisterIauctionsSidebar.php
#	Modules/Iauctions/Providers/RouteServiceProvider.php
#	Modules/Ibanners/Events/Handlers/RegisterIbannersSidebar.php
#	Modules/Ibanners/Http/Controllers/Admin/BannerController.php
#	Modules/Ibanners/Http/Controllers/Api/BannerApiController.php
#	Modules/Ibanners/Presenters/BannerAdsPresenter.php
#	Modules/Ibanners/Providers/RouteServiceProvider.php
#	Modules/Ibanners/Repositories/Eloquent/EloquentPositionRepository.php
#	Modules/Ibanners/Services/PositionRenderer.php
#	Modules/Ibinnacle/Listeners/RegisterIbinnacleSidebar.php
#	Modules/Ibinnacle/Providers/

--- a/composer.json
+++ b/composer.json
@@ -18,36 +18,48 @@
         "cviebrock/eloquent-sluggable": "^10.0",
         "doctrine/dbal": "^3.5",
         "guzzlehttp/guzzle": "^7.2",
-        "nwidart/laravel-menus": "^7.0",
-        "imagina/stylist": "^3.0",
+        "imagina/laravel-menus": "^10.0",
+        "imagina/stylist": "^4.0",
         "intervention/image": "^2.5",
         "jantinnerezo/livewire-alert": "^2.2",
         "kalnoy/nestedset": "^6.0",
-        "laracasts/presenter": "^0.2.4",
+        "laracasts/presenter": "^0.2.6",
         "laravel/framework": "^10.13",
         "laravel/passport": "^11.5",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "laravelcollective/html": "^6.4",
         "livewire/livewire": "^2.11",
-        "maatwebsite/laravel-sidebar": "^2.5",
+        "imagina/laravel-sidebar": "^3.1",
         "mcamara/laravel-localization": "^1.7",
         "nwidart/laravel-modules": "^8.0",
-        "pusher/pusher-php-server": "^7.0",
+        "pusher/pusher-php-server": "^7.2",
         "ramsey/uuid": "^4.1",
         "symfony/yaml": "^6.2",
         "tightenco/ziggy": "^0.9.4",
         "typicms/nestablecollection": "^3.0",
         "venturecraft/revisionable": "^1.40",
         "yajra/laravel-datatables-oracle": "^10.3",
-        "league/flysystem-aws-s3-v3": "^3.0"
+        "league/flysystem-aws-s3-v3": "^3.0",
+        "livewire/livewire": "^2.11",
+        "jantinnerezo/livewire-alert": "^2.2",
+        "spatie/laravel-responsecache": "^7.4",
+        "hisorange/browser-detect": "^4.4.0",
+        "maatwebsite/excel": "^3.1",
+        "stancl/tenancy": "^3.7",
+        "barryvdh/laravel-dompdf": "^2.0",
+        "spatie/laravel-sitemap": "^6.3",
+        "spatie/robots-txt": "^2.0",
+        "yajra/laravel-datatables-oracle": "^10.4",
+        "tightenco/ziggy": "^1.5",
+        "cviebrock/eloquent-sluggable":"^8.0|^9.0|^10.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.8",
-        "league/flysystem-aws-s3-v3": "^1.0",
+        "league/flysystem-aws-s3-v3": "^3.0",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
-        "orchestra/testbench": "^8.0",
+        "orchestra/testbench": "^8.5",
         "phpunit/phpunit": "^9.5.10",
         "predis/predis": "^1.1",
         "fakerphp/faker": "^1.9.1",
@@ -93,7 +105,10 @@
     "config": {
         "preferred-install": "dist",
         "sort-packages": true,
-        "optimize-autoloader": true
+        "optimize-autoloader": true,
+        "platform": {
+            "php": "8.1"
+        }
     },
     "minimum-stability": "stable",
     "prefer-stable": true
