--- a/composer.json
+++ b/composer.json
@@ -56,13 +56,14 @@
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.8",
+        "fakerphp/faker": "^1.9.1",
+        "laravel/sail": "*",
         "league/flysystem-aws-s3-v3": "^3.0",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "orchestra/testbench": "^8.5",
         "phpunit/phpunit": "^9.5.10",
         "predis/predis": "^1.1",
-        "fakerphp/faker": "^1.9.1",
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
