Cambios realizados por el proceso de isntalacion de Asgard y se modifico la configuracion del docker para su implementacion.

--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,7 @@
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.8",
         "fakerphp/faker": "^1.9.1",
-        "laravel/sail": "*",
+        "laravel/sail": "^1.24",
         "league/flysystem-aws-s3-v3": "^3.0",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
