--- a/composer.json
+++ b/composer.json
@@ -61,7 +61,8 @@
         "nunomaduro/collision": "^7.0",
         "orchestra/testbench": "^8.5",
         "phpunit/phpunit": "^10",
-        "spatie/laravel-ignition": "^2.0"
+        "spatie/laravel-ignition": "^2.0",
+        "friendsofphp/php-cs-fixer": "^3.27.0"
     },
     "autoload": {
         "psr-4": {
