Update | v10.x 22-04-2024 minimum stability

--- a/composer.json
+++ b/composer.json
@@ -165,7 +165,7 @@
             "composer/installers": true
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 
 }
