--- a/composer.json
+++ b/composer.json
@@ -76,7 +76,7 @@
         "imagina/igamification-module": "v10.x-dev",
         "imagina/iqreable": "v10.x-dev",
         "imagina/slider-module": "v10.x-dev",
-
+        "imagina/iredirect-module": "v10.x-dev",
 
 
         "imagina/flatly-theme": "v10.x-dev",
