+ fix | master 12-06-24 add submodule isearch

--- a/composer.json
+++ b/composer.json
@@ -53,34 +53,35 @@
         "yajra/laravel-datatables-oracle": "^10.4",
 
 
-        "imagina/iblog-module": "v10.x-dev",
-        "imagina/core-module": "v10.x-dev",
-        "imagina/isite-module": "v10.x-dev",
-        "imagina/iprofile-module": "v10.x-dev",
-        "imagina/dashboard-module": "v10.x-dev",
-        "imagina/user-module": "v10.x-dev",
-        "imagina/workshop-module": "v10.x-dev",
-        "imagina/setting-module": "v10.x-dev",
-        "imagina/menu-module": "v10.x-dev",
-        "imagina/media-module": "v10.x-dev",
-        "imagina/tag-module": "v10.x-dev",
-        "imagina/page-module": "v10.x-dev",
-        "imagina/translation-module": "v10.x-dev",
-        "imagina/notification-module": "v10.x-dev",
-        "imagina/ischedulable-module": "v10.x-dev",
-        "imagina/ifillable-module": "v10.x-dev",
-        "imagina/ihelpers-module": "v10.x-dev",
-        "imagina/iforms-module": "v10.x-dev",
-        "imagina/ibuilder-module": "v10.x-dev",
-        "imagina/ilocations-module": "v10.x-dev",
-        "imagina/igamification-module": "v10.x-dev",
-        "imagina/iqreable": "v10.x-dev",
-        "imagina/slider-module": "v10.x-dev",
-        "imagina/iredirect-module": "v10.x-dev",
+        "imagina/iblog-module": "^10.0",
+        "imagina/core-module": "^10.0",
+        "imagina/isite-module": "^10.0",
+        "imagina/iprofile-module": "^10.0",
+        "imagina/dashboard-module": "^10.0",
+        "imagina/user-module": "^10.0",
+        "imagina/workshop-module": "^10.0",
+        "imagina/setting-module": "^10.0",
+        "imagina/menu-module": "^10.0",
+        "imagina/media-module": "^10.0",
+        "imagina/tag-module": "^10.0",
+        "imagina/page-module": "^10.0",
+        "imagina/translation-module": "^10.0",
+        "imagina/notification-module": "^10.0",
+        "imagina/ischedulable-module": "^10.0",
+        "imagina/ifillable-module": "^10.0",
+        "imagina/ihelpers-module": "^10.0",
+        "imagina/iforms-module": "^10.0",
+        "imagina/ibuilder-module": "^10.0",
+        "imagina/ilocations-module": "^10.0",
+        "imagina/igamification-module": "^10.0",
+        "imagina/iqreable": "^10.0",
+        "imagina/slider-module": "^10.0",
+        "imagina/iredirect-module": "^10.0",
+        "imagina/isearch-module": "^10.0",
 
 
-        "imagina/flatly-theme": "v10.x-dev",
-        "imagina/adminlte-theme": "v10.x-dev"
+        "imagina/flatly-theme": "^10.0",
+        "imagina/adminlte-theme": "^10.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.8",
