--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "Modules/Iredirect"]
 	path = Modules/Iredirect
 	url = https://github.com/imagina/imaginacms-iredirect.git
+[submodule "Modules/Isearch"]
+	path = Modules/Isearch
+	url = https://github.com/imagina/imaginacms-isearch.git
