--- a/composer.json
+++ b/composer.json
@@ -77,6 +77,7 @@
         "imagina/iqreable": "v10.x-dev",
         "imagina/slider-module": "v10.x-dev",
         "imagina/iredirect-module": "v10.x-dev",
+        "imagina/isearch-module": "v10.x-dev",
 
 
         "imagina/flatly-theme": "v10.x-dev",
